--- a/srcpkgs/xorg-server/INSTALL
+++ b/srcpkgs/xorg-server/INSTALL
@@ -3,13 +3,13 @@ post)
 	cat <<_EOF
 =======================================================================
 
-${PKGNAME}-${VERSION} 1.16 now requires your user to be a member of
+${PKGNAME}-${VERSION} now requires your user to be a member of
 the *input* and *video* groups to be able to run X without root
 permissions. Make sure to add your user to these groups:
 
     # sudo usermod -a -G input,video <user>
 
-and the re-login to make it effective.
+and then re-login to make it effective.
 
 =======================================================================
 _EOF
