--- a/srcpkgs/rpi-base/INSTALL
+++ b/srcpkgs/rpi-base/INSTALL
@@ -1,6 +1,12 @@
 case "$ACTION" in
 post)
 	# enable sshd, ntpdate, ntpd and dhcpcd services.
-	systemctl enable sshd.service ntpdate.service ntpd.service dhcpcd.service
+	if [ -x /usr/bin/systemctl ]; then
+		systemctl enable sshd.service ntpdate.service ntpd.service dhcpcd.service
+	elif [ -x /usr/bin/runit-init ]; then
+		ln -s /etc/sv/sshd /var/service/
+		ln -s /etc/sv/ntpd /var/service/
+		ln -s /etc/sv/dhcpcd /var/service/
+	fi
 	;;
 esac
