--- a/srcpkgs/rpi-base/INSTALL
+++ b/srcpkgs/rpi-base/INSTALL
@@ -3,10 +3,10 @@ post)
 	# enable sshd, ntpdate, ntpd and dhcpcd services.
 	if [ -x /usr/bin/systemctl ]; then
 		systemctl enable sshd.service ntpdate.service ntpd.service dhcpcd.service
-	elif [ -x /usr/bin/runit-init ]; then
-		ln -s /etc/sv/sshd /var/service/
-		ln -s /etc/sv/ntpd /var/service/
-		ln -s /etc/sv/dhcpcd /var/service/
+	elif [ -d etc/runit/runsvdir/default ]; then
+		ln -s /etc/sv/sshd etc/runit/runsvdir/default/
+		ln -s /etc/sv/ntpd etc/runit/runsvdir/default/
+		ln -s /etc/sv/dhcpcd etc/runit/runsvdir/default/
 	fi
 	;;
 esac
