mariadb: fix initial setup noticed by @dominikh.

--- a/srcpkgs/mariadb/INSTALL
+++ b/srcpkgs/mariadb/INSTALL
@@ -2,7 +2,8 @@
 #
 case ${ACTION} in
 post)
-	usr/bin/mysql_install_db --user=mysql --basedir=/usr
+	install -dm0700 var/lib/mysql
+	usr/bin/mysql_install_db --user=mysql --basedir=/usr --datadir=/var/lib/mysql
 	chown -R mysql:mysql var/lib/mysql
 	;;
 esac
