postfix: revamp template
- Use upstream permissions in $make_dirs
- Enforce upstream permissions in .INSTALL
- Add legacy symlink /usr/sbin/sendmail
- Manpages are installed uncompressed
- Keep /etc/postfix like upstream

--- a/srcpkgs/postfix/INSTALL
+++ b/srcpkgs/postfix/INSTALL
@@ -1,9 +1,7 @@
 case "${ACTION}" in
 post)
 	# set up correct permissions.
-	cd usr/sbin
-	chgrp postdrop postqueue postdrop
-	chmod g+s postqueue postdrop
+	postfix set-permissions
 
 	# run newaliases.
 	newaliases
