base-directories: make a /var/mail -> /var/spool/mail symlink.

--- a/srcpkgs/base-directories/INSTALL
+++ b/srcpkgs/base-directories/INSTALL
@@ -59,11 +59,16 @@ make_system_dirs()
 			exit 1
 		fi
 	done
-	cd var && ln -sf ../run . && cd ..
-	cd var && ln -sf ../run/lock . && cd ..
+
+	cd var
+	ln -sf ../run .
+	ln -sf ../run/lock .
+	ln -sf spool/mail mail
+	cd ..
 
 	install -dm1777 tmp
 	install -dm1777 var/tmp
+
 }
 
 case "${ACTION}" in
