base-directories: create /media for udisks.

--- a/srcpkgs/base-directories/INSTALL
+++ b/srcpkgs/base-directories/INSTALL
@@ -4,7 +4,7 @@ make_system_dirs()
 	# Install FHS system directories.
 	#
 	for d in boot etc etc/modprobe.d etc/skel \
-		home dev proc usr mnt opt sys var run/lock; do
+		home dev proc usr mnt opt sys media var run/lock; do
 		[ ! -d ${d} ] && install -d ${d}
 	done
 
