oracle-jre: move jre to /usr/lib/jvm/jre$version; update to 8u22

--- a/srcpkgs/oracle-jre/INSTALL
+++ b/srcpkgs/oracle-jre/INSTALL
@@ -16,15 +16,15 @@ do_install() {
 	echo "$ORACLE_JRE_CHECKSUM  $BUILD_DIR/jre.tar.gz" | sha256sum -c || return 1
 	tar xf ${BUILD_DIR}/jre.tar.gz || return 1
 
-	if [ -d usr/share/java/$PKGNAME ]; then
-		rm -rf usr/share/java/$PKGNAME
+	if [ -d usr/lib/jvm/jre$ORACLE_JRE_LONG_VERSION ]; then
+		rm -rf usr/lib/jvm/jre$ORACLE_JRE_LONG_VERSION
 	fi
-	mv jre$ORACLE_JRE_LONG_VERSION usr/share/java/$PKGNAME || return 1
+	mv jre$ORACLE_JRE_LONG_VERSION usr/lib/jvm/jre$ORACLE_JRE_LONG_VERSION || return 1
 }
 
 case "${ACTION}" in
 post)
-	. usr/share/java/oracle-jre-vars.sh
+	. usr/lib/jvm/oracle-jre-vars.sh
 	do_install
 	RESULT=$?
 	rm -r $BUILD_DIR
