oracle-jdk: move jdk to /usr/lib/jvm/jdk$version; update to 8u22

--- a/srcpkgs/oracle-jdk/INSTALL
+++ b/srcpkgs/oracle-jdk/INSTALL
@@ -16,15 +16,15 @@ do_install() {
 	echo "$ORACLE_JDK_CHECKSUM  $BUILD_DIR/jdk.tar.gz" | sha256sum -c || return 1
 	tar xf ${BUILD_DIR}/jdk.tar.gz || return 1
 
-	if [ -d usr/share/java/$PKGNAME ]; then
-		rm -rf usr/share/java/$PKGNAME
+	if [ -d usr/lib/jvm/jdk$ORACLE_JDK_LONG_VERSION ]; then
+		rm -rf usr/lib/jvm/jdk$ORACLE_JDK_LONG_VERSION
 	fi
-	mv jdk$ORACLE_JDK_LONG_VERSION usr/share/java/$PKGNAME || return 1
+	mv jdk$ORACLE_JDK_LONG_VERSION usr/lib/jvm/jdk$ORACLE_JDK_LONG_VERSION || return 1
 }
 
 case "${ACTION}" in
 post)
-	. usr/share/java/oracle-jdk-vars.sh
+	. usr/lib/jvm/oracle-jdk-vars.sh
 	do_install
 	RESULT=$?
 	rm -r $BUILD_DIR
