pcsclite: fixed the template file and INSTALL file for use with runit

--- a/srcpkgs/pcsclite/INSTALL
+++ b/srcpkgs/pcsclite/INSTALL
@@ -1,6 +1,6 @@
 
 # This script will advise the user of the needed steps to 
-# activate the systemd service of PC/SC Lite
+# activate the runit service of PC/SC Lite
 #
 case "${ACTION}" in
 post)
@@ -8,12 +8,10 @@ post)
     cat << _EOF
 =====================================================================
 
-- To activate the pcscd daemon, needed to manage the smart card you
-  have to activate the systemd service typing as root:
+- To activate pcscd that is needed to manage the smart card you
+  have to activate the runit service typing as root:
 
-  # systemctl enable pcscd.socket
-  # systemctl start pcscd.socket
-
+  # ln -s /etc/sv/pcscd /var/service/
 
 - DRIVERS
 
