wireshark: switch to INSTALL.msg.

--- a/srcpkgs/wireshark/INSTALL
+++ b/srcpkgs/wireshark/INSTALL
@@ -1,14 +1,6 @@
 case "${ACTION}" in
 post)
 	chgrp wireshark usr/bin/dumpcap
-	/usr/sbin/setcap 'CAP_NET_RAW+eip CAP_NET_ADMIN+eip' usr/bin/dumpcap
-	cat <<_EOF
-=================================================================
-
-You should also add your user to the 'wireshark' group to be able
-to capture traffic
-
-==================================================================
-_EOF
+	setcap 'CAP_NET_RAW+eip CAP_NET_ADMIN+eip' usr/bin/dumpcap
 	;;
 esac
