mksh: update to R50c

--- a/srcpkgs/mksh/patches/patch-mksh.1
+++ b/srcpkgs/mksh/patches/patch-mksh.1
@@ -21,8 +21,8 @@ Kill the .Dt override and restore installation a normal man page.
  .\" with -mandoc, it might implement .Mx itself, but we want to
  .\" use our own definition. And .Dd must come *first*, always.
  .\"
--.Dd $Mdocdate: July 29 2014 $
-+.Dd July 29, 2014
+-.Dd $Mdocdate: October 3 2014 $
++.Dd October 3 2014
  .\"
  .\" Check which macro package we use, and do other -mdoc setup.
  .\"
