--- a/srcpkgs/beaglebone-base/INSTALL
+++ b/srcpkgs/beaglebone-base/INSTALL
@@ -4,6 +4,7 @@ post)
 	if [ -x /usr/bin/systemctl ]; then
 		systemctl enable sshd.service ntpdate.service ntpd.service dhcpcd.service
 	elif [ -d etc/runit/runsvdir/default ]; then
+		ln -s /etc/sv/acpid etc/runit/runsvdir/default/
 		ln -s /etc/sv/sshd etc/runit/runsvdir/default/
 		ln -s /etc/sv/ntpd etc/runit/runsvdir/default/
 		ln -s /etc/sv/dhcpcd etc/runit/runsvdir/default/
