base-files: update to 0.140.

--- a/srcpkgs/base-files/INSTALL
+++ b/srcpkgs/base-files/INSTALL
@@ -83,6 +83,8 @@ make_system_dirs() {
 	install -dm1777 tmp
 	install -dm1777 var/tmp
 
+	# remove leftover polkit rules from live systems
+	[ -e etc/polkit-1/rules.d/void-live.rules ] && rm etc/polkit-1/rules.d/void-live.rules
 }
 
 case "${ACTION}" in
