bind: update to 9.14.2.

--- a/srcpkgs/bind/INSTALL
+++ b/srcpkgs/bind/INSTALL
@@ -6,7 +6,7 @@ post)
 
 	# create an rndc.key if it doesn't already exist
 	if [ ! -s etc/named/rndc.key ]; then
-		usr/bin/rndc-confgen -r /dev/urandom -b 256 | \
+		usr/bin/rndc-confgen -b 256 | \
 			head -n 5 >> etc/named/rndc.key
 		chown root:named etc/named/rndc.key
 		chmod 644 etc/named/rndc.key
