couchdb: update to 3.0.0
Switch to use mozjs60-devel instead of js-devel. We can remove js now.
Installation instructions are in couchdb(1). In short for testing:
1) Install package
2) Edit /etc/couchdb/local.ini and set admin password
3) Run 'sudo -i -u couchdb /usr/lib/couchdb/bin/couchdb'
4) Open http://localhost:5984/_utils/index.html
5) Verify installation http://localhost:5984/_utils/index.html#verifyinstall
6) Start service by symlinking /etc/sv/couchdb to /var/service
7) Relax.

--- a/srcpkgs/couchdb/INSTALL
+++ b/srcpkgs/couchdb/INSTALL
@@ -1,6 +1,8 @@
 case "$ACTION" in
         post)
-                chown -R couchdb /var/lib/couchdb/ /var/log/couchdb/
+		chown -R couchdb:couchdb var/lib/couchdb/ var/log/couchdb/ usr/lib/couchdb/
+		find usr/lib/couchdb -type d -exec chmod 0770 {} \;
+		chmod 0644 usr/lib/couchdb/etc/*
         ;;
 esac
 
